@@ -47,4 +47,6 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs '-javaagent:' + configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }.absolutePath
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
